apps/cli/test/expected/multiple-parse-errors.out.txt
{
	"fixture": "multiple-parse-errors",
	"command": "siren list"
}
---
valid
---
error: unexpected token '!!!'; expected 'task' or 'milestone'
 --> siren/broken1.siren:1:1
  |
1 | !!! syntax error
  | ^^^
note: skipping siren/broken1.siren due to syntax errors
error: unexpected token '@@@'; expected 'task' or 'milestone'
 --> siren/broken2.siren:1:1
  |
1 | @@@ another error
  | ^^^
note: skipping siren/broken2.siren due to syntax errors
